--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,17 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
+<div style="background-color:#EDEFF7">
+    @*<div class="sidebar">
         <NavMenu />
     </div>
-
-    <main>        
-        <div class="top-row px-4 auth">
+*@
+    <main>
+        @*<div class="top-row auth">
             <LoginDisplay />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+        </div>*@
 
-        <article class="content px-4">
+        <article>
             @Body
         </article>
     </main>
